# acn_r

./: .env.example  .envexample  .gitignore  Cargo.toml  Dockerfile  README.md  appsettings.json  appsettings_dev.json  appsettings_prd.json  build_docker.sh  cargo.toml  create_env_dev.sh  docker-compose.yml  fly.toml  prd.yml  run.sh
.fly/: acn.toml  listen_r.toml
.github/workflows/: acn.yml  fly.yml  listen_r.yml  listener.yml  test.yml
.prd/: docker-compose.yml
acn/: Cargo.toml  Dockerfile
acn/src/: main.rs
acn/src/application/: dependency_configuration.rs  lavalink_ctx.rs  mod.rs
acn/src/features/commands/: groups_configuration.rs  help.rs
acn/src/features/commands/jukebox/: mod.rs  play.rs  playlist.rs  queue.rs  shuffle.rs  skip.rs  stop.rs
acn/src/features/commands/misc/: att.rs  deploy.rs  mod.rs  stats.rs
acn/src/features/commands/r34/: mod.rs  random.rs
acn/src/features/commands/reactions/: add_react.rs  list_react.rs  mod.rs  react.rs
acn/src/features/events/: after.rs  check.rs  error.rs  mod.rs
acn/src/features/events/handlers/: guild_updated.rs  member_added.rs  member_removed.rs  member_updated.rs  ready.rs
acn/src/features/events/handlers/voice_updated/: mod.rs
acn/src/features/events/handlers/voice_updated/dispatches/: songbird_disconnect.rs  songbird_reconnect.rs
acn_r/: .envexample  Cargo.toml  Dockerfile
acn_r_lib/: Cargo.toml  appsettings_test.json
acn_r_lib/tests/: deploy.rs  migrate_user_activity.rs  stats.rs
bots/acn_r/: Cargo.toml  Dockerfile
bots/listen_r/: Cargo.toml  Dockerfile  appsettings_dev.json  appsettings_prd.json  fly.toml
lavalink/: Dockerfile  application.yml  fly.toml
lib/: .envexample  Cargo.toml
lib/src/: lib.rs
lib/src/application/: dependency_configuration.rs  mod.rs
lib/src/application/infra/: appsettings.rs  lavalink_ctx.rs  mod.rs  mongo_client.rs  songbird_listener.rs
lib/src/application/models/entities/: mod.rs  voice.rs
lib/src/application/repositories/: command.rs  guild.rs  mod.rs  user.rs  voice.rs
lib/src/configurations/: acn.rs  mod.rs
lib/src/extensions/: mod.rs
lib/src/extensions/serenity/: context_ext.rs  guild_ext.rs  mod.rs
lib/src/features/: acn.rs  listener.rs  mod.rs
lib/src/features/commands/: acn_commands.rs  listener_commands.rs  mod.rs
lib/src/features/commands/jukebox/: mod.rs  play.rs  stop.rs
lib/src/features/commands/misc/: mod.rs  stats.rs
lib/src/features/commands/reactions/: add_react.rs  list_react.rs
lib/src/features/events/: after.rs
lib/src/features/events/handlers/: invite_created.rs  invoker.rs  member_added.rs  member_updated.rs  mod.rs  ready.rs
lib/src/features/events/handlers/voice_updated/: mod.rs
lib/src/features/events/handlers/voice_updated/dispatches/: afk_disconnect.rs  listener.rs  mod.rs  songbird_reconnect.rs
lib/tests/: deploy.rs  migrate_user_activity.rs  stats.rs
listen_r/: Dockerfile  fly.toml
listen_r/src/: main.rs
mongo/aggregation_pipelines/: filter_stats_discrepancies.json  get_stats.json
mongo/commands/: delete_user_activity.txt
mongo/queries/: filter_user_activities_earliest_to_latest.json
mongo_pipelines/: filter_stats_discrepancies.txt  filter_user_activities_earliest_to_latest.json  filter_user_activities_earliest_to_latest.txt  get_stats.json
notes/: need_refac.md  todo_list.md
src/: bot.rs  lib.rs  main.rs
src/acn/: Dockerfile
src/application/: dependency_configuration.rs  mod.rs
src/commands/: general.rs  misc.rs
src/config/: event_handler.rs  group_registry.rs  mod.rs  registerGroups.rs
src/data/: utils.rs
src/extensions/: dependency_ext.rs  group_registry.rs  (+6 more)
tests/: deploy.rs  filter_activity_discrepancies.rs  migrate_user_activity.rs  stats.rs  test.rs
(+187 files in other folders)
