[package]
name = "acn_r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
anyhow = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
mongodb-gridfs = "0.2.5"
reqwest = { version = "0.11.16", features = ["json"] }
futures = "0.3.28"
poise = { version = "0.5.5", features = ["cache"] }
lavalink-rs = { git = "https://github.com/DoggySazHi/lavalink-rs-moogan", branch = "master"}
songbird = "0.3.2"
rand = "0.8.5"
dashmap = "5.4.0"