[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
poise = { version = "0.5.5", features = ["cache"] }
songbird = "0.3.2"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
futures = "0.3.28"
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"] }
mongodb-gridfs = "0.2.5"
env_logger = "0.10.0"
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1.0.91"
dotenv = "0.15.0"
lavalink-rs = { git = "https://github.com/DoggySazHi/lavalink-rs-moogan", branch = "master"}
